bootstrap/infrab.yml
---
# File: templates/service-game-2048-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-svc
  namespace: infrab
  labels:
    app.kubernetes.io/name: game-2048-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: game-2048
  ports:
    - name: http-80
      port: 80
      targetPort: 80
      protocol: TCP

---
# File: templates/deployment-game-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  labels:
    app.kubernetes.io/name: game-2048
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  namespace: infrab
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  template:
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      containers:
        - image: "public.ecr.aws/l6m2t8p7/docker-2048:latest"
          imagePullPolicy: Always
          name: game-2048
          stdin: false
          stdinOnce: false
          tty: false
          ports:
            - containerPort: 80
              name: http-80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 128Mi
    metadata:
      labels:
        app.kubernetes.io/name: game-2048
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: game-2048

---
# File: templates/gatewayclass-kong-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-class
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: kong-class
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
spec:
  controllerName: konghq.com/kic-gateway-controller

---
# File: templates/gateway-gapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gapi
  labels:
    app.kubernetes.io/name: gapi
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  namespace: infrab
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    konghq.com/plugins: prometheus-plugin-kong
spec:
  gatewayClassName: kong-class
  listeners:
    - name: g-api3
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute

---
# File: templates/httproute-route2-argo1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2-argo1
  namespace: infrab
  labels:
    app.kubernetes.io/name: route2-argo1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo1-argocd-server
          namespace: argocd1
          port: 80
  hostnames:
    - argo.k8s.cloudman.pro

---
# File: templates/httproute-route3-game-2048.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route3-game-2048
  namespace: infrab
  labels:
    app.kubernetes.io/name: route3-game-2048
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: game-2048-svc
          namespace: infrab
          port: 80
  hostnames:
    - game2048.k8s.cloudman.pro

---
# File: templates/httproute-route3-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route3-kong
  namespace: infrab
  labels:
    app.kubernetes.io/name: route3-kong
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-manager
          namespace: infrab
          port: 8002
  hostnames:
    - kong.k8s.cloudman.pro

---
# File: templates/referencegrant-grant-infrab-to-argocd1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: grant-infrab-to-argocd1
  namespace: argocd1
  labels:
    app.kubernetes.io/name: grant-infrab-to-argocd1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infrab
  to:
    - group: ""
      kind: Service
