bootstrap/testArgo.yml

---
# File: templates/gateway-gapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gapi
  labels:
    app.kubernetes.io/name: gapi
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  namespace: infrab
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: kong-custom
  listeners:
    - name: gapi3
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute

---
# File: templates/httproute-route2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2
  namespace: infrab
  labels:
    app.kubernetes.io/name: route2
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: gapi3
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo1-argocd-server
          namespace: argocd1
          port: 80
  hostnames:
    - argo.k8s.cloudman.pro

---
# File: templates/referencegrant-grant-infrab-to-argocd1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: grant-infrab-to-argocd1
  namespace: argocd1
  labels:
    app.kubernetes.io/name: grant-infrab-to-argocd1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infrab
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-custom
  annotations:
    # Esta anotação é obrigatória para KIC instalado via Helm (sem Operator)
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  # Controlador Gateway API padrão das versões mais recentes do KIC
  controllerName: konghq.com/kic-gateway-controller
