bootstrap/testeArgo.yml
---
# File: templates/gatewayclass-kong-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-class
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: kong-class
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
spec:
  controllerName: konghq.com/kic-gateway-controller

---
# File: templates/gateway-gapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gapi
  labels:
    app.kubernetes.io/name: gapi
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  namespace: infrab
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: kong-class
  listeners:
    - name: gapi3
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute

---
# File: templates/httproute-route2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2
  namespace: infrab
  labels:
    app.kubernetes.io/name: route2
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: gapi3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo1-argocd-server
          namespace: argocd1
          port: 80
  hostnames:
    - argo.k8s.cloudman.pro
---
# File: templates/httproute-kong-manager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-manager-route
  namespace: infrab
  labels:
    app.kubernetes.io/name: kong-manager
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: gapi3 # Referenciando o listener da porta 80 do seu Gateway
  hostnames:
    - kong.k8s.cloudman.pro
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-manager # Nome padrão gerado pelo chart quando fullnameOverride é "kong"
          port: 8002        # Porta padrão do Kong Manager (HTTP)
---
# File: templates/referencegrant-grant-infrab-to-argocd1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: grant-infrab-to-argocd1
  namespace: argocd1
  labels:
    app.kubernetes.io/name: grant-infrab-to-argocd1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: Ricardo
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infrab
  to:
    - group: ""
      kind: Service
