bootstrap/games.yml
---
# File: templates/service-game-2048-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-svc
  namespace: gamestest
  labels:
    app.kubernetes.io/name: game-2048-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: game-2048

---
# File: templates/service-supermario-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermario-svc
  namespace: gamestest
  labels:
    app.kubernetes.io/name: supermario-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: port-8080
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: supermario

---
# File: templates/deployment-game-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  labels:
    app.kubernetes.io/name: game-2048
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  namespace: gamestest
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: deployment-game-2048-v1-sa
      containers:
        - image: "public.ecr.aws/l6m2t8p7/docker-2048:latest"
          imagePullPolicy: IfNotPresent
          name: game-2048
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
    metadata:
      labels:
        app.kubernetes.io/name: game-2048
  selector:
    matchLabels:
      app.kubernetes.io/name: game-2048

---
# File: templates/deployment-supermario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supermario
  labels:
    app.kubernetes.io/name: supermario
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  namespace: gamestest
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: deployment-supermario-v1-sa
      containers:
        - image: pengbai/docker-supermario
          imagePullPolicy: IfNotPresent
          name: supermario
          stdin: false
          stdinOnce: false
          tty: false
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
    metadata:
      labels:
        app.kubernetes.io/name: supermario
  selector:
    matchLabels:
      app.kubernetes.io/name: supermario

---
# File: templates/httproute-games-game-2048.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-game-2048
  namespace: gamestest
  labels:
    app.kubernetes.io/name: games-game-2048
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: game-2048-svc
          namespace: gamestest
          port: 80
  hostnames:
    - game2048.k8s.admin.billingpay.com.br

---
# File: templates/httproute-games-supermario.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-supermario
  namespace: gamestest
  labels:
    app.kubernetes.io/name: games-supermario
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: supermario-svc
          namespace: gamestest
          port: 80
  hostnames:
    - mario.k8s.admin.billingpay.com.br

---
# File: templates/networkpolicy-allow-gateway-to-game-2048-80.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-game-2048-80
  namespace: gamestest
  labels:
    app.kubernetes.io/name: allow-gateway-to-game-2048-80
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: game-2048
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infrab
      ports:
        - protocol: TCP
          port: 80

---
# File: templates/networkpolicy-allow-gateway-to-supermario-8080.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-supermario-8080
  namespace: gamestest
  labels:
    app.kubernetes.io/name: allow-gateway-to-supermario-8080
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State11
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: supermario
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infrab
      ports:
        - protocol: TCP
          port: 8080
